# premiership-matches

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
data/input/: data_dictionary.txt
notebooks/: premiership-analyses.ipynb
reports/: premiership-analyses.html
